<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="-143dp">

        <TextView
            android:id="@+id/textViewCounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewCounts"
            android:textSize="20sp"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/textViewQuestion"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnChoice1"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:text="@string/btnChoice1" />

        <Button
            android:id="@+id/btnChoice2"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:text="@string/btnChoice2" />

        <Button
            android:id="@+id/btnChoice3"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:text="@string/btnChoice3" />

        <Button
            android:id="@+id/btnChoice4"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:text="@string/btnChoice4" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>